<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:title="@string/TitleInicio" />
        <item
            android:id="@+id/nav_pesquisar"
            android:title="@string/TitlePesquisar" />
        <item
            android:id="@+id/nav_discussoes"
            android:title="@string/TitleDiscussoes" />
        <item
            android:id="@+id/nav_sessoes"
            android:title="@string/TitleSessoesEstudo" />
        <item
            android:id="@+id/nav_materiais"
            android:title="@string/TitleMateriais" />
        <item
            android:id="@+id/nav_categorias"
            android:title="@string/TitleCategorias" />
        <item
            android:id="@+id/nav_favoritos"
            android:title="@string/TitleFavoritos" />
        <item
            android:id="@+id/nav_estatisticas"
            android:title="@string/TitleEstatisticas" />
        <item
            android:id="@+id/nav_sobre"
            android:title="@string/TitleSobre" />
    </group>
    <item
        android:id="@+id/nav_logout"
        android:title="@string/TitleLogout"
        android:titleTextColor="#FF0000" />
</menu>